feat: Nova cobertura de código Java com Jacoco.