@@ -11,7 +11,7 @@
     </parent>
     <groupId>br.com.somejava8examples</groupId>
     <artifactId>someJava8Examples</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <name>Some Java8 Examples</name>
     <description>Some Java 8 examples</description>
 
@@ -80,6 +80,11 @@
                     <release>${java.version}</release>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <fork>true</fork>
+                    <compilerargs>
+                        <arg>--add-modules</arg>
+                        <arg>java.xml.bind</arg>
+                    </compilerargs>
                 </configuration>
             </plugin>
             <plugin>
@@ -93,15 +98,71 @@
                     <skipTests>false</skipTests>
                     <workingDirectory>${project.build.directory}</workingDirectory>
                     <trimStackTrace>false</trimStackTrace>
-                    <forkCount>4</forkCount>
-                    <threadCount>4</threadCount>
+                    <forkCount>10</forkCount>
+                    <threadCount>10</threadCount>
                     <reuseForks>false</reuseForks>
                     <parallel>classes</parallel>
                     <perCoreThreadCount>true</perCoreThreadCount>
                     <useUnlimitedThreads>false</useUnlimitedThreads>
-                    <argLine>-Xmx1024m</argLine>
                 </configuration>
-            </plugin>
+             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.16</version>
+                <executions>
+                   <execution>
+                      <id>default-integration-test</id>
+                      <goals>
+                         <goal>integration-test</goal>
+                      </goals>
+                   </execution>
+                </executions>
+             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.5</version>
+                 <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                       <id>post-unit-test</id>
+                       <phase>test</phase>
+                       <goals>
+                          <goal>report</goal>
+                          <goal>check</goal>
+                       </goals>
+                       <configuration>
+                        <excludes>
+                            <exclude>**/*SomeJava8ExamplesApplication.*</exclude>
+                            <exclude>br/com/somejava8examples/commons/entities*</exclude>
+                        </excludes>
+                          <rules>
+                             <rule>
+                                <element>BUNDLE</element>
+                                <limits>
+                                   <limit implementation="org.jacoco.report.check.Limit">
+                                      <counter>INSTRUCTION</counter>
+                                      <value>COVEREDRATIO</value>
+                                      <minimum>0.60</minimum>
+                                   </limit>
+                                   <limit>
+                                      <counter>COMPLEXITY</counter>
+                                      <value>COVEREDRATIO</value>
+                                      <minimum>0.60</minimum>
+                                   </limit>
+                                </limits>
+                             </rule>
+                          </rules>
+                       </configuration>
+                    </execution>
+                 </executions>
+             </plugin>
         </plugins>
     </build>
 
